--- a/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
@@ -12,3 +12,4 @@
 @using WebRifa.Blazor.Components
 @using Microsoft.AspNetCore.Authorization
 @using WebRifa.Blazor.Helpers
+@using WebRifa.Blazor.Components.Common.PopUp
