--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptsIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptsIndex.razor
@@ -3,7 +3,7 @@
 @using WebRifa.Blazor.BlazorServices
 
 @attribute [Authorize]
-@rendermode InteractiveServer
+@rendermode InteractiveAuto
 
 @inject IReceiptBlazorService receiptService
 @inject IJSRuntime JS
