--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Error.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Error.razor
@@ -1,10 +1,13 @@
 ﻿@page "/Error"
+
 @using System.Diagnostics
+@using Microsoft.AspNetCore.Mvc
+@using Microsoft.AspNetCore.WebUtilities
 
-<PageTitle>Error</PageTitle>
+<PageTitle>Erro</PageTitle>
 
-<h1 class="text-danger">Error.</h1>
-<h2 class="text-danger">An error occurred while processing your request.</h2>
+<h1 class="text-danger">Erro!</h1>
+<h2 class="text-danger">Ocorreu um erro durante a execução.</h2>
 
 @if (ShowRequestId)
 {
@@ -13,24 +16,33 @@
     </p>
 }
 
-<h3>Development Mode</h3>
-<p>
-    Swapping to <strong>Development</strong> environment will display more detailed information about the error that occurred.
-</p>
-<p>
-    <strong>The Development environment shouldn't be enabled for deployed applications.</strong>
-    It can result in displaying sensitive information from exceptions to end users.
-    For local debugging, enable the <strong>Development</strong> environment by setting the <strong>ASPNETCORE_ENVIRONMENT</strong> environment variable to <strong>Development</strong>
-    and restarting the app.
-</p>
+@if (ShowProblemDetails) {
+    <p>
+        <strong>@ErrorTitle</strong>
+    </p>
+    <p>
+        @ErrorDetail
+    </p>
+}
 
 @code{
     [CascadingParameter]
     private HttpContext? HttpContext { get; set; }
-
     private string? RequestId { get; set; }
-    private bool ShowRequestId => !string.IsNullOrEmpty(RequestId);
-
-    protected override void OnInitialized() =>
+    private string? ErrorTitle { get; set; } = string.Empty;
+    private string? ErrorDetail { get; set; } = string.Empty;
+    
+    protected override void OnInitialized()
+    {
         RequestId = Activity.Current?.Id ?? HttpContext?.TraceIdentifier;
+
+        ErrorTitle = HttpContext?.Request?.Query["title"] ?? string.Empty;
+        ErrorDetail = HttpContext?.Request.Query["detail"] ?? string.Empty;
+    }
+
+    private bool ShowRequestId => !string.IsNullOrEmpty(RequestId);
+    private bool ShowProblemDetails => 
+        !string.IsNullOrEmpty(ErrorTitle) &&
+        !string.IsNullOrEmpty(ErrorDetail);
+
 }
