--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Layout/NavMenu.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Layout/NavMenu.razor
@@ -48,6 +48,12 @@
                     <span class="" aria-hidden="true"></span> Sorteios
                 </NavLink>
             </div>
+            
+            <div class="nav-item px-3">
+                <NavLink class="nav-link" href="carryoutdraw">
+                    <span class="" aria-hidden="true"></span> Realizar Sorteio
+                </NavLink>
+            </div>
 
             <div class="nav-item px-3">
                 <NavLink class="nav-link" href="auth">
