--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/CarryOutDraw.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/CarryOutDraw.razor
@@ -7,6 +7,7 @@
 
 @inject IRaffleBlazorService raffleService
 @inject IDrawBlazorServices drawService
+@inject IJSRuntime JS
 
 <h3>Realizar Sorteio</h3>
 
