--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RaffleAddEdit.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RaffleAddEdit.razor
@@ -88,7 +88,7 @@ else {
             _navigationManager.NavigateTo("raffles");
         }
         else {
-            //to-do: put action with card pop up.
+            await JS.ShowErrorMessage(result.ReasonPhrase!);
         }
     }
 
