DI error fixing.

--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RaffleAddEdit.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RaffleAddEdit.razor
@@ -10,6 +10,7 @@
 
 @inject IRaffleBlazorService _raffleService
 @inject NavigationManager _navigationManager
+@inject IJSRuntime JS
 
 <h3>@GetPageHeader() Rifa</h3>
 
