Creating PDF receipt export.

--- a/WebRifa.Blazor/WebRifa.Blazor/Components/App.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/App.razor
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="WebRifa.Blazor.styles.css" />
     <link rel="stylesheet" href="./sweetalert2/sweetalert2.min.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <HeadOutlet />
 </head>
 
@@ -18,6 +19,8 @@
     <script src="_framework/blazor.web.js"></script>
     <script src="./sweetalert2/sweetalert2.all.min.js"></script>
     <script src="./webrifa.sweetalert.js"></script>
+    <script src="./html2pdf/html2pdf.bundle.min.js"></script>
+    <script src="./webrifa.html2pdf.js"></script>
 </body>
 
 </html>
