--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptDetail.razor.css
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptDetail.razor.css
@@ -7,6 +7,11 @@
     font-family: Arial, sans-serif;
 }
 
+.receipt  button {
+    margin: 20px auto 0 auto;
+    display: block;
+}
+
 .header {
     margin-bottom: 5px;
     background-color: #d2b3ff;
