--- a/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
@@ -13,3 +13,4 @@
 @using Microsoft.AspNetCore.Authorization
 @using WebRifa.Blazor.Helpers
 @using WebRifa.Blazor.Components.Common.PopUp
+@using WebRifa.Blazor.Components.Common.Loading
