--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptDetail.razor.css
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptDetail.razor.css
@@ -51,13 +51,8 @@
 
 .qr-code {
     text-align: center;
-    margin-top: 20px;
+    margin: 20px auto auto auto;
 }
-
-    .qr-code img {
-        width: 100px;
-        height: 100px;
-    }
 
 ul {
     display: flex;
