--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/CarryOutDraw.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/CarryOutDraw.razor
@@ -17,6 +17,9 @@
 else {
     <div class="container">
         <div class="draw-fields">
+
+            <Datalist />
+
             <input placeholder="Rifa"
                    id="raffleInput"
                    list="raffles"
