--- a/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
@@ -14,3 +14,4 @@
 @using WebRifa.Blazor.Helpers
 @using WebRifa.Blazor.Components.Common.PopUp
 @using WebRifa.Blazor.Components.Common.Loading
+@using WebRifa.Blazor.Components.Common.Datalist
