--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Common/Datalist/Datalist.razor.css
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Common/Datalist/Datalist.razor.css
@@ -1,28 +1,12 @@
-﻿/* Dropdown Button */
-.dropbtn {
-    background-color: #04AA6D;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
-
-    /* Dropdown button on hover & focus */
-    .dropbtn:hover, .dropbtn:focus {
-        background-color: #3e8e41;
-    }
-
-/* The search field */
+﻿/* The search field */
 #myInput {
     box-sizing: border-box;
-    background-image: url('searchicon.png');
-    background-position: 14px 12px;
     background-repeat: no-repeat;
     font-size: 16px;
-    padding: 14px 20px 12px 45px;
+    padding: 14px 20px 12px 14px;
     border: none;
     border-bottom: 1px solid #ddd;
+    width: 100%;
 }
 
     /* The search field when it gets focus/clicked on */
@@ -30,13 +14,11 @@
         outline: 3px solid #ddd;
     }
 
-/* The container <div> - needed to position the dropdown content */
 .dropdown {
     position: relative;
     display: inline-block;
 }
 
-/* Dropdown Content (Hidden by Default) */
 .dropdown-content {
     display: none;
     position: absolute;
@@ -46,20 +28,18 @@
     z-index: 1;
 }
 
-    /* Links inside the dropdown */
     .dropdown-content a {
         color: black;
         padding: 12px 16px;
         text-decoration: none;
         display: block;
+        cursor: pointer;
     }
 
-        /* Change color of dropdown links on hover */
         .dropdown-content a:hover {
             background-color: #f1f1f1
         }
 
-/* Show the dropdown menu (use JS to add this class to the .dropdown-content container when the user clicks on the dropdown button) */
 .show {
     display: block;
 }
