Changing from Datalist to DropDownSelect.

--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/CarryOutDraw.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/CarryOutDraw.razor
@@ -19,11 +19,9 @@ else {
     <div class="container">
         <div class="draw-fields">
 
-            <Datalist 
-                Placeholder="Rifa..."
-                PropertyName="@(nameof(RaffleDto.Description))"
-                TItem="RaffleDto"
-                Items="Raffles"/>
+            <DropDownSelect Placeholder="Rifa..."
+                    PropertyName="@(nameof(RaffleDto.Description))"
+                    Items="Raffles"/>
 
             <input placeholder="Rifa"
                    id="raffleInput"
