--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/CarryOutDraw.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/CarryOutDraw.razor
@@ -21,18 +21,8 @@ else {
 
             <DropDownSelect Placeholder="Rifa..."
                     PropertyName="@(nameof(RaffleDto.Description))"
-                    Items="Raffles"/>
-
-            <input placeholder="Rifa"
-                   id="raffleInput"
-                   list="raffles"
-                   @onchange="RaffleInputOnChange" />
-
-            <dataList id="raffles">
-                @foreach (var raffle in Raffles ?? new()) {
-                    <option value="@raffle.Id">@raffle.Description</option>
-                }
-            </dataList>
+                    Items="Raffles"
+                    Callback="ReceiveSelectedRaffle"/>
 
             @if (SelectedRaffle is not null) {
                 <span>
