--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Common/DropDownSelect/DropDownSelect.razor.css
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Common/DropDownSelect/DropDownSelect.razor.css
@@ -1,5 +1,4 @@
-﻿/* The search field */
-#myInput {
+﻿#myInput {
     box-sizing: border-box;
     background-repeat: no-repeat;
     font-size: 16px;
@@ -9,7 +8,6 @@
     width: 100%;
 }
 
-    /* The search field when it gets focus/clicked on */
     #myInput:focus {
         outline: 3px solid #ddd;
     }
