Working on DropDownSelect component. I'll merge in master. It's working good.

--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Common/DropDownSelect/DropDownSelect.razor.css
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Common/DropDownSelect/DropDownSelect.razor.css
@@ -8,6 +8,10 @@
     width: 100%;
 }
 
+.input-focus {
+    outline: 3px solid #ddd;
+}
+
     #myInput:focus {
         outline: 3px solid #ddd;
     }
