--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Common/DropDownSelect/DropDownSelect.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Common/DropDownSelect/DropDownSelect.razor
@@ -1,20 +1,29 @@
 ﻿@typeparam TItem
 
+@currentFocusIndexItem
 <div class="dropdown d-block"
-        @onfocusin="@ShowItems"
-        @onfocusout="@HideItems">
+        @onclick="ShowItems"
+        @onfocusin="ShowItems"
+        @onfocusout="HideItems"
+        @onkeyup="OnDropDownOnKeyUp">
 
     <input type="text"
            placeholder="@Placeholder"
+           autocomplete="off"
            id="myInput"
            @bind=SelectedItemValue
-           @oninput="@OnInputKeyUp">
+           @oninput="OnInputKeyUp">
 
     <div id="myDropdown"
-         class="dropdown-content @GetShowldShowItemsCSSClass()">
+         class="dropdown-content @GetCSSClassInputFocus()">
 
         @foreach (var item in GetFilteredList()) {
-            <a @onclick="@(() => OnClickItem(item))">@GetPropValue(item)</a>
+            <a class="@GetFocusCSSClass(GetIndexFromItem(item))"
+                @onmouseover="(() => OnMouseOverIndex(GetIndexFromItem(item)))"
+                @onclick="(() => SelectItem(item))">
+                
+                @GetPropValue(item)
+            </a>
         }
     </div>
 </div>
