--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RafflesIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Raffles/RafflesIndex.razor
@@ -21,7 +21,8 @@ else if (!Raffles!.Any()) {
     <p>Não há Rifas Cadastradas.</p>
 }
 else {
-    <table class="table">
+    <div class="table-responsive">
+        <table class="table">
         <thead>
             <tr>
                 <th>Descrição</th>
@@ -47,6 +48,7 @@ else {
             }
         </tbody>
     </table>
+    </div>
 }
 
 
