--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/DrawsIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Draws/DrawsIndex.razor
@@ -44,6 +44,9 @@ else {
     </table>
 }
 
-<PopUp Label="Sorteio" IsVisibleChanged="LoadDraws" @ref="PopUp">
+<PopUp Label="Sorteio" 
+        IsVisibleChanged="LoadDraws" 
+        @ref="PopUp" 
+        Size="PopUpSize.Medium">
     <CarryOutDraw/>
 </PopUp>
