--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Common/DropDownSelect/DropDownSelect.razor.css
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Common/DropDownSelect/DropDownSelect.razor.css
@@ -23,11 +23,11 @@
 
 .dropdown-content {
     display: none;
-    position: absolute;
+    position: fixed;
     background-color: #f6f6f6;
     min-width: 230px;
     border: 1px solid #ddd;
-    z-index: 1;
+    z-index: 99;
 }
 
     .dropdown-content a {
