--- a/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
@@ -15,3 +15,4 @@
 @using WebRifa.Blazor.Components.Common.PopUp
 @using WebRifa.Blazor.Components.Common.Loading
 @using WebRifa.Blazor.Components.Common.DropDownSelect
+@using WebRifa.Blazor.Core.ApplicationModels
