--- a/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
@@ -16,3 +16,4 @@
 @using WebRifa.Blazor.Components.Common.Loading
 @using WebRifa.Blazor.Components.Common.DropDownSelect
 @using WebRifa.Blazor.Core.ApplicationModels
+@using WebRifa.Blazor.Components.Common.Pagination
