--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptsIndex.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Receipts/ReceiptsIndex.razor
@@ -9,6 +9,8 @@
 @inject IReceiptBlazorService receiptService
 @inject IJSRuntime JS
 
+<PageTitle>Recibos</PageTitle>
+
 <h3>Recibos</h3>
 
 @if (Receipts is null) {
