--- a/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Tickets/BuyTickets.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/Pages/Tickets/BuyTickets.razor
@@ -13,9 +13,11 @@
 
 @rendermode InteractiveServer
 
+<PageTitle>Compra de Tickets</PageTitle>
+
 <div class="container">
     @if (IsLoading()) {
-        <p>Carregando...</p>
+        <Loading/>
     } else if (!Raffles?.Any() ?? new()){
         <p>Não há Rifas Cadastradas.</p>
     }
