--- a/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
+++ b/WebRifa.Blazor/WebRifa.Blazor/Components/_Imports.razor
@@ -17,3 +17,4 @@
 @using WebRifa.Blazor.Components.Common.DropDownSelect
 @using WebRifa.Blazor.Core.ApplicationModels
 @using WebRifa.Blazor.Components.Common.Pagination
+@using WebRifa.Blazor.Components.Common.SearchField
